<?xml version="1.0" encoding="utf-8"?>
<!--
  * Pace Smartphone
  * https://www.instagram.com/adityatprtma/
  * Created on 22-january-2022.
  * Created by : Adityatprtma
   -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/iphone_13"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/kekuatan_super_baru_di_tangan"
                android:textColor="@color/red"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/selengkap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:background="@drawable/btn_stroke1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/selengkapnya"
                android:textColor="#fff"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-65dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="57dp"
                android:text="@string/galaxy_note"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="115dp"
                android:layout_marginEnd="10dp"
                android:text="@string/powerphone_yang_memberdayakan_pekerjaan_dan_permainan_anda"
                android:textColor="@color/textColor"
                android:textSize="9sp"/>


            <TextView
                android:id="@+id/selengkap1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="86dp"
                android:background="@drawable/btn_stroke1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/selengkapnya"
                android:textColor="#fff"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-65dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:text="@string/iphone_12"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="65dp"
                android:text="@string/iphone_yang_selalu_mengagumkan"
                android:textColor="@color/red"
                android:textSize="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="85dp"
                android:background="@drawable/btn_stroke1"
                android:padding="5dp"
                android:text="@string/selengkapnya"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="#fff"
                android:textSize="11sp" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>