<?xml version="1.0" encoding="utf-8"?>
<!--
  * Pace Smartphone
  * https://www.instagram.com/adityatprtma/
  * Created on 22-january-2022.
  * Created by : Adityatprtma
   -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_join_now_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="45dp"
        android:text="@string/title_1"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="105dp"
        android:background="@drawable/btn_stroke"
        android:padding="1dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_login_btn"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/btn2"
        android:padding="1dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/main_login_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:padding="20dp"
        android:src="@drawable/ic_text" />


</RelativeLayout>