<?xml version="1.0" encoding="utf-8"?>
<!--
  * Created by : suryaadampratama
   -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bar_profile"
    tools:context=".SettinsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/textColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/close_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/keluar"
                android:textColor="@color/bar_profile"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/update_account_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/update"
                android:textColor="@color/bar_profile"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/app_bar_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/profile_image_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ubah_profil"
        android:textColor="@color/textColor"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image_change_btn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="15dp"
        android:hint="Nomor telepon..."
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:textColorHighlight="#F3EDED"
        android:textColorHint="#E4AFAEAE"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_phone_number"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/textColor"
        android:hint="Nama lengkap..."
        android:textColorHint="#E4AFAEAE"
        android:textSize="20sp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_full_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/alamat"
        android:textColor="@color/textColor"
        android:textColorHint="#E4AFAEAE"
        android:textSize="20sp"
        android:padding="10dp" />
</RelativeLayout>
