<?xml version="1.0" encoding="utf-8"?>
<!--
  * Created by : suryaadampratama
   -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/kiri"
        android:layout_width="147dp"
        android:layout_height="120dp"
        android:src="@drawable/cloud1" />

    <ImageView
        android:id="@+id/kanan"
        android:layout_width="150dp"
        android:layout_height="144dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-10dp"
        android:layout_marginTop="-16dp"
        android:src="@drawable/cloud2" />

    <TextView
        android:id="@+id/register_applogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/text2"
        android:text="@string/get_started"
        android:textColor="@color/textColor"
        android:textSize="32sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/register">

        <TextView android:id="@+id/textaja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/desc2"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/register_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textaja"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="23dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="15dp"
            android:hint="Nama Lengkap"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/grey"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/register_phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_username_input"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="17dp"
            android:hint="@string/nomor_telepon"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_phone_number_input"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="17dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/grey"
            android:textSize="18sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_password_input"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn2"
            android:padding="14dp"
            android:text="REGISTER"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>